# quantum-derivatives-trader

./: .gitignore  README.md  pyproject.toml  server.md
docs/: PHASES.md  RESULTS.md  architecture.md  theory.md
notebooks/: 01_convergence_analysis.py  02_convergence_analysis.py  03_error_analysis.py  04_scaling_analysis.py  05_basket_analysis.py  06_calibration_analysis.py  07_advanced_models_analysis.py
scripts/: benchmark.py  benchmark_fd_mc.py  benchmark_speed.py  convergence_study.py  demo_compute.py  train_american.py  train_barrier.py  train_basket.py  train_calibration.py  train_classical.py  train_heston.py  train_hybrid.py  train_hybrid_basket.py  train_merton.py  train_profiled.py
src/: __init__.py
src/classical/: __init__.py  losses.py  networks.py  pinn.py  pinn_basket.py  pinn_calibration.py
src/compute/: __init__.py  parallel.py  profiler.py  router.py  scheduler.py
src/data/: __init__.py  collocation.py  market_data.py  synthetic.py
src/pde/: __init__.py  american.py  barrier.py  basket.py  black_scholes.py  dupire.py  heston.py  jump_diffusion.py  merton.py
src/pricing/: __init__.py  analytical.py  finite_difference.py  monte_carlo.py  pinn_pricer.py
src/quantum/: __init__.py  amplitude_estimation.py  hybrid_basket.py  hybrid_pinn.py  kernels.py  tensor_network.py  variational.py
src/utils/: __init__.py  (+2 more)
tests/: conftest.py  test_advanced_models.py  test_barrier.py  test_basket.py  test_calibration.py  test_classical_pinn.py  test_compute.py  test_greeks.py  test_hybrid_basket.py  test_pde.py  test_pricing.py  test_quantum.py
(+2 files in other folders)
