[project]
name = "quantum-pinn-derivatives"
version = "0.1.0"
description = "Quantum-classical hybrid PINNs for derivatives pricing"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pennylane>=0.34",
    "pennylane-lightning>=0.34",
    "jax[cpu]>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
gpu = ["pennylane-lightning-gpu"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["."]
